--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -4,11 +4,11 @@
 
     <item android:title="@string/delete_todo"
         app:showAsAction="ifRoom"
-        android:id="@+id/delete_item"
+        android:id="@+id/delete_todo"
         android:icon="@drawable/ic_delete" />
 
     <item android:title="@string/save_todo"
         app:showAsAction="always"
-        android:id="@+id/save_item"
+        android:id="@+id/save_todo"
         android:icon="@drawable/ic_save_item" />
 </menu>
